--- a/Vending machine/Vending machine/My Project/Resources.resx
+++ b/Vending machine/Vending machine/My Project/Resources.resx
@@ -121,19 +121,25 @@
   <data name="nickles" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\nickles.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Dollar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Dollar.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Doritos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Doritos.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Quart" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Quart.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Lays" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Lays.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="dime" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dime.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Lays" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Lays.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Dollar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dollar.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Barb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Barb.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Quart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Quart.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sour" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sour.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
