--- a/Vending machine/Vending machine/My Project/Resources.resx
+++ b/Vending machine/Vending machine/My Project/Resources.resx
@@ -118,28 +118,70 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="nickles" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\nickles.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="sour" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sour.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Doritos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Doritos.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Lays" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Lays.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Quart" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Quart.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="nickles" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nickles.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Takis2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Takis2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Fun" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Fun.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="dime" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dime.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cheet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cheet.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Lays" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Lays.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Dollar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Dollar.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Takis21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Takis21.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Barb" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Barb.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Quart" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Quart.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Kit1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kit1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="sour" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\sour.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="dort" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dort.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="nerds" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nerds.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Kit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Kit.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Snickers" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Snickers.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Takis1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Takis1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="takis3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\takis3.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Takis" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Takis.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dor" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dor.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
