womens page almost done

--- a/clothe shop/clothe shop/My Project/Resources.resx
+++ b/clothe shop/clothe shop/My Project/Resources.resx
@@ -118,68 +118,110 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="hoodie3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hoodie3.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="hoodie8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hoodie8.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="woman" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\woman.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="shirt 8" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 8.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="hoodie6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hoodie6.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="child" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\child.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="shirt 12" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 12.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="shirt 9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 9.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="shirt 10" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\shirt 10.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shirt 5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 5.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="hoodie3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hoodie3.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shirt 7" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 7.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pants1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pants1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shirt 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="shirt 111" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 111.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shirt 11" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 11.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="hoodie7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hoodie7.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Hoodie1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Hoodie1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="male" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\male.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="hoodie5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hoodie5.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="shirt 4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 4.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="shirt 6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 6.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="shirt 101" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 101.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="shirt 14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 14.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="hoodie2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hoodie2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shirt 111" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 111.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="shirt 12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 12.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shorts5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shorts5.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shorts8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shorts8.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shorts1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shorts1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Hoodie1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Hoodie1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 3.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shorts6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shorts6.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PJ4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PJ4.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="child" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\child.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pants8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pants8.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 5.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shorts7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shorts7.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PJ5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PJ5.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 7.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pants7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pants7.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hoodie6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hoodie6.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pants2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pants2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Pj6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Pj6.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 16.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 101" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 101.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 4.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hoodie5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hoodie5.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PJ1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PJ1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 15.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PJ7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PJ7.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="hoodie4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hoodie4.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -187,13 +229,61 @@
   <data name="Shirt 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Shirt 1.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shirt 3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 3.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="shirt 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="shirt 9" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\shirt 9.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="hoodie61" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hoodie61.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hoodie7" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hoodie7.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="PJ2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PJ2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shorts3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shorts3.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PJ3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PJ3.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pants3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pants3.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pants6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pants6.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 11.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 6.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shorts4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shorts4.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="woman" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\woman.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt13.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pants5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pants5.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shirt 8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shirt 8.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="shorts2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\shorts2.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\male.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pants4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pants4.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="PJ8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PJ8.jfif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
